style: fixed margin-top on about on mobile

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -165,6 +165,10 @@ section {
     @media only screen and (max-width: $mobile) {
         padding-top: 140px;
         margin-bottom: -140px;
+
+        &#about {
+            margin-top: -125px;
+        }
     }
 
     h3 {
